--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NAOM</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  <script src="https://kit.fontawesome.com/1f6a29c5b3.js" defer crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../css/registro.css">
+  <link rel="stylesheet" href="../css/carrito.css">
+  <script src="../js/carrito.js" defer></script>
+  <title>NAOM</title>
 </head>
 
 <body>
@@ -66,8 +67,57 @@
       </form>
     </div>
   </nav>
-
-  <h1>Carrito</h1>
+  <!-- Carrito -->
+  <main class="container">
+    <header class="main-headers mt-3">
+      <h1 class="text-center"> <b> Carrito </b> </h1>
+    </header>
+    <div class="row justify-content-around" id="carrito">
+      <!-- User Articles -->
+      <div class="text-center align-items col-lg-6 col-sm-12 pt-2" id="userArticles">
+        <!-- <p>Su carrito actualmente está vacío.</p>
+        <a href="./maquillaje.html">Continúe explorando aquí</a> -->
+        <div class="article">
+          <img class="img-article" src="../Fotos-productos/Art-15.png" alt="">
+          <div class="purchase-info">
+              <div class="article-info">
+                <p class="article-title">upsy daisy</p>
+                <p class="article-name">creme gel liner kit</p>
+              </div>
+              <div class="delete">
+                <span class="material-symbols-rounded">delete</span>
+              </div>
+              <div class="article-total">
+                <p>Cantidad: 1</p>
+                <p class="total-price">$495.00 MXN</p>
+              </div>
+              <div class="btnIncDec">
+                <div class="btn-commands">
+                  <span class="minus">-</span>
+                  <span class="num">01</span>
+                  <span class="plus">+</span>
+                </div>
+              </div>
+          </div>
+        </div>
+        
+      </div>
+      <!-- Summary-->
+      <div id="resumen" class="col-lg-5 col-sm-12 mt-3">
+          <div id="subtotal">
+            <p>Subtotal</p>
+            <p>0.00 MXN</p>
+          </div>
+          <div>
+            <p>Este es el resumen de tu compra</p>
+          </div>
+          <div>
+            <button id="finCompra">Finalizar compra</button>
+          </div>
+      </div>
+    </div>
+  </main>
+  
 
   <footer class="text-center text-white" style="background-color:black;">
     <!-- Grid container -->
