--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -161,7 +161,7 @@
     </div>
   </footer>
   <script src="../js/navbar.js"></script>
-  <script src="../js/registro.js"></script>
+  <script type="module" src="../js/registro.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
