--- a/HTML/usuario.html
+++ b/HTML/usuario.html
@@ -79,16 +79,16 @@
           <div class="card bg-light" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title "><strong>Información de contacto</strong></h5>
-              <p class="card-text">example text</p>
+              <p class="card-text" id="userInfo"></p>
               <a href="#" class="btn btn-primary" style="background-color:rgb(239, 207, 207); color:rgb(28, 49, 94); border-color:rgb(239, 207, 207) ;">Editar</a>
             </div>
           </div>
         </li>
         <li class="nav-item">
           <div class="card bg-light" style="width: 18rem;">
-            <div class="card-body">
+            <div class="card-body" id="userInfo">
               <h5 class="card-title"><strong>Dirección de envío</strong></h5>
-              <p class="card-text">example text</p>
+              <p class="card-text" id="userAddress"></p>
               <a href="#" class="btn btn-primary" style="background-color:rgb(239, 207, 207);  color:rgb(28, 49, 94); border-color:rgb(239, 207, 207) ;">Editar</a>
             </div>
           </div>
@@ -99,8 +99,8 @@
     <div>
     <table id="tablaListaCompras" class="table table-borderless table-striped" style="width: 60rem; align-items: center;">
       <thead>
+        <p style="font-size: 25px;">Mis ordenes</p>
         <tr> 
-          <th><p style="font-size: 25px;">Mis ordenes</p></th>
           <th scope="col">N° de pedido</th>
           <th scope="col">Fecha</th>
           <th scope="col">Enviar a</th>
@@ -108,7 +108,7 @@
           <th scope="col">Estado</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="tableOrders">
       </tbody>
     </table>
   </div>
@@ -143,7 +143,7 @@
     </div>
   </footer>
   <script src="../js/navbar.js"></script>
-  <script src="../js/usuario.js"></script>
+  <script type="module" src="../js/usuario.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
