--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -105,6 +105,18 @@
         <input type="number" step="0.01" name="stock" id="form4" class="form-control" />
         <div class="alertRegistro" id="alertAvailable" style="display: none;">Ingresa productos disponibles</div>
       </div>
+      <div class="form-outline col-lg-7">
+        <label class="form-label" for="form5">Categoría</label>
+        <select class="form-select" aria-label="Default select example" id="selectorCategoria">
+          <option selected>Selecciona una opción</option>
+          <option value="1">1.- Maquillaje</option>
+          <option value="2">2.- Brochas</option>
+          <option value="3">3.- Cuidado Facial</option>
+          <option value="4">4.- Accesorios</option>
+        </select>
+        <!-- <input type="number" step="0.01" name="stock" id="form4" class="form-control" /> -->
+        <div class="alertRegistro" id="alertAvailable" style="display: none;">Ingresa productos disponibles</div>
+      </div>
       <div class="form-outline mb-4 col-lg-7" id="buttons">
         <button type="submit" class="mx-2" id="btnProduct">Agregar producto</button>
         <button type="button" class="mx-2" id="btnProductCancel">Cancelar</button>
